--- a/package.json
+++ b/package.json
@@ -9,20 +9,34 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "allure": "0.0.0",
+    "allure-commandline": "^2.9.0",
+    "cucumber-junit-convert": "^1.0.2",
+    "http-server": "^0.11.1",
+    "jsonfile": "^5.0.0",
+    "junit-report-builder": "^1.3.2",
+    "wdio-cucumber-framework": "^2.2.8"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
-    "glob": "^7.1.6",
-    "multiple-cucumber-html-reporter": "^1.13.2",
+    "cucumber-html-reporter": "^4.0.5",
+    "cucumber-junit-formatter": "^0.1.3",
+    "date-and-time": "^0.6.3",
+    "glob": "^7.1.3",
+    "junit-merge": "^2.0.0",
     "node-fetch": "^2.6.0",
+    "selenium-standalone": "^6.16.0",
     "wdio-allure-reporter": "^0.8.3",
-    "wdio-cucumber-framework": "^2.2.8",
+    "wdio-cucumber-reporter": "0.0.2",
     "wdio-dot-reporter": "0.0.10",
-    "wdio-multiple-cucumber-html-reporter": "^1.1.1",
-    "wdio-selenium-standalone-service": "0.0.12",
+    "wdio-iedriver-service": "^0.1.0",
+    "wdio-json-reporter": "^0.3.1",
+    "wdio-junit-reporter": "^0.4.4",
+    "wdio-mocha-framework": "^0.6.4",
+    "wdio-multiple-cucumber-html-reporter": "^0.3.3",
+    "wdio-selenium-standalone-service": "0.0.10",
     "wdio-spec-reporter": "^0.1.5",
     "webdriverio": "^4.14.4"
-  },
-  "dependencies": {
-    "date-and-time": "^0.12.0"
   }
 }
